# wvlet

./: .git-blame-ignore-revs  .gitignore  .jvmopts  .scalafmt.conf  AGENTS.md  CLAUDE.md  GEMINI.md  PR_DRAFT_1146.md  README.md  TECHNICAL_WHITEPAPER.md  build.sbt  create_gz_files.py  create_gzip.py  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sbt
.github/: dependabot.yml  release-drafter.yml  sdks.yaml
design-notes/: 2025-01-15-new-typer-architecture.md  2026-06-13-typer-import-resolution.md  technical-whitepaper-publication-plan.md
docker/: dockcross-linux-arm64-lts
docs/: repl.md
flow-ui-main/: index.html  package-lock.json  package.json  vite.config.js
highlightjs-wvlet/: .gitignore  README.md  build.js  package-lock.json  package.json  test-cdn.html  test-standalone.html  test.html  test.js
nix/: mkWvcLib.nix  targets.nix
plans/: 2025-01-24-typer-integration.md  2025-01-25-task-oriented-syntax.md  2026-01-25-flow-syntax.md  2026-04-29-fix-native-windows-localtime-r.md  2026-05-03-drop-airframe-from-lang.md  (+13 more)
sdks/python/: .gitignore  API_REFERENCE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
sdks/python/examples/: README.md  basic_usage.py  data_analysis.py  integration_demo.py  json_api_example.py  wvlet_tutorial.ipynb
sdks/python/tests/: __init__.py  test_compiler.py  test_runner.py
sdks/python/wvlet/: __init__.py  compiler.py  runner.py
sdks/python/wvlet/libs/: .gitkeep
sdks/python/wvlet/libs/darwin_arm64/: .gitkeep
sdks/python/wvlet/libs/linux_aarch64/: .gitkeep
sdks/python/wvlet/libs/linux_x86_64/: .gitkeep
(+1489 files in other folders)
